# deus-windows

./: .gitignore  CMakeLists.txt  readme.md  solution.bat
doc/: license.md  release.md
res/: config.h.in  main.xcf  pandoc.html  resource.h  resource.manifest  resource.rc
res/data/: shader.frag  shader.vert
src/: client.cc  client.h  dialog.cc  dialog.h  loader.cc  loader.h  main.cc  window.cc  window.h
src/gl/: buffer.h  image.h  opengl.h  program.h  shader.h  texture.h  vao.h
src/ice/: archive.cc  archive.h  exception.h
